[fix] (ABC-269): Fixed issue with alignement depending on if number type or not

--- a/src/modules/base/datatable/datatable.css
+++ b/src/modules/base/datatable/datatable.css
@@ -54,7 +54,6 @@
 
 .avonni-datatable-summarize_styling {
     display: flex;
-    justify-content: flex-start;
     padding: 0.1rem 0;
 }
 
